--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,8 @@ jobs:
         run: |
           set -euo pipefail
           git remote set-url origin https://x-access-token:"$GITHUB_TOKEN"@github.com/"$GITHUB_REPOSITORY".git
-          git config --global user.email "actions@github.com"
-          git config --global user.name "actions"
+          git config --global user.email "charmbot@sgrs.uk"
+          git config --global user.name "juju-charm-bot"
 
           git checkout $GITHUB_REF_NAME
           git add data/repos.json
