conf: adjust juju teams to poll, use 'bots' not 'leads'

--- a/releasegen.yaml
+++ b/releasegen.yaml
@@ -3,7 +3,7 @@ teams:
     github:
       - org: juju
         teams:
-          - leads
+          - bots
         ignores:
           - charmstore
           - theblues
