conf: s/observability-admins/observability

--- a/releasegen.yaml
+++ b/releasegen.yaml
@@ -19,7 +19,7 @@ teams:
     github:
       - org: canonical
         teams:
-          - observability-admin
+          - observability
 
   - name: MLOps
     github:
