ci: fix deployment token

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,5 +50,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
-          personal_token: ${{ secrets.API_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+          user_name: juju-charm-bot
+          user_email: charmbot@sgrs.uk
