--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       - main
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron: "*/30 * * * *"
+    - cron: "0 * * * *"
 
 jobs:
   build:
@@ -22,6 +22,11 @@ jobs:
         with:
           hugo-version: "latest"
           extended: true
+      
+      - name: Baseline API rate limit
+        run: gh api rate_limit
+        env:
+          GH_TOKEN: ${{ secrets.API_TOKEN }}
 
       - name: Rebuild the site
         run: |
@@ -32,6 +37,11 @@ jobs:
         env:
           RELEASEGEN_TOKEN: ${{ secrets.API_TOKEN }}
           RELEASEGEN_VERSION: "0.1.5"
+      
+      - name: Post-update API rate limit usage
+        run: gh api rate_limit
+        env:
+          GH_TOKEN: ${{ secrets.API_TOKEN }}
 
       - name: Commit changes to data file
         run: |
